made bottom bar fixed position on tablet

--- a/src/components/bottomBar/BottomBar.css
+++ b/src/components/bottomBar/BottomBar.css
@@ -35,3 +35,9 @@
 .BottomBar-nav img:last-child {
   margin-left: 40px;
 }
+
+@media screen and (max-width: 1024px) {
+  .BottomBar {
+    position: fixed;
+  }
+}
